Before 7th lab.

--- a/src/main/resources/goralczyk/maciej/authentication/view/i18n/messages_pl.properties
+++ b/src/main/resources/goralczyk/maciej/authentication/view/i18n/messages_pl.properties
@@ -1,6 +1,6 @@
 loginHeader=Strona logowania
 name=Nazwa
-password=Has?o
+password=Has\u0142o
 login=Zaloguj
 reset=Resetuj
-loginError=B??d logowania
+loginError=B\u0142\u0105d logowania
