--- a/src/main/resources/goralczyk/maciej/entities/view/i18n/messages_en.properties
+++ b/src/main/resources/goralczyk/maciej/entities/view/i18n/messages_en.properties
@@ -42,3 +42,6 @@ participantARequired=Participant A is required
 tournamentRequired=Tournament is required
 selectTournament=Select Tournament
 addMatch=Add Match
+homePage=Home Page
+home=Welcome
+action=Action
