--- a/src/main/resources/goralczyk/maciej/entities/view/i18n/messages_pl.properties
+++ b/src/main/resources/goralczyk/maciej/entities/view/i18n/messages_pl.properties
@@ -1,44 +1,47 @@
-users=U?ytkownicy
+users=U\u017Cytkownicy
 matches=Mecze
 tournaments=Turnieje
 login=Zaloguj
-delete=Usu?
+delete=Usu\u0144
 edit=Edytuj
-create=Utwórz
+create=Utw\u00F3rz
 update=Aktualizuj
 cancel=Anuluj
 reset=Resetuj
 save=Zapisz
-tournamentCreationHeader=Utwórz nowy turniej
+tournamentCreationHeader=Utw\u00F3rz nowy turniej
 editTournamentHeader=Edytuj turniej
 tournamentName=Nazwa turnieju
 tournamentLocation=Lokalizacja turnieju
-backToTournamentList=Wró? do listy turniejów
+backToTournamentList=Wró\u0107 do listy turniej\u00F3w
 tournamentNotFound=Brak turnieju
-tournamentDetails=Szczegó?y turnieju
+tournamentDetails=Szczeg\u00F3\u0142y turnieju
 id=ID
 name=Nazwa
 location=Lokalizacja
 actions=Akcje
-noMatches=Brak meczów
+noMatches=Brak mecz\u00F3w
 noMatch=Brak meczu
-noTournaments=Brak turniejów
+noTournaments=Brak turniej\u00F3w
 newMatch=Nowy mecz
-view=Podgl?d
+view=Podgl\u0105d
 participantA=Uczestnik A
 newTournament=Nowy turniej
 unauthorized=Nieautoryzowany
 noValidCredentials=Brak poprawnych danych logowania
 forbidden=Zabronione
-notEnoughPrivileges=Niewystarczaj?ce uprawnienia
+notEnoughPrivileges=Niewystarczaj\u0105ce uprawnienia
 notFound=Nie znaleziono
 resourceNotFound=Nie znaleziono zasobu
 tournament=Turniej
-viewDetails=Zobacz szczegó?y
+viewDetails=Zobacz szczeg\u00F3\u0142y
 editMatchHeader=Edytuj mecz
-startDateTime=Data i godzina rozpocz?cia
+startDateTime=Data i godzina rozpocz\u0119cia
 newMatchHeader=Nowy mecz!
 participantARequired=Uczestnik A jest wymagany
 tournamentRequired=Turniej jest wymagany
 selectTournament=Wybierz turniej
 addMatch=Dodaj mecz
+homePage=Strona powitalna
+home=Witamy
+action=Akcja
