--- a/src/main/resources/goralczyk/maciej/view/i18n/messages_en.properties
+++ b/src/main/resources/goralczyk/maciej/view/i18n/messages_en.properties
@@ -5,3 +5,4 @@ navigation.tournaments=Tournaments
 navigation.matches=Matches
 navigation.users=Users
 currentYear=Current Year
+pageName=Tournament Tracker
