--- a/src/main/resources/goralczyk/maciej/view/i18n/messages_pl.properties
+++ b/src/main/resources/goralczyk/maciej/view/i18n/messages_pl.properties
@@ -1,7 +1,8 @@
 logged=Zalogowany
 logout=Wyloguj
-navigation.home=Strona g?ówna
+navigation.home=Strona g\u0142\u00F3wna
 navigation.tournaments=Turnieje
 navigation.matches=Mecze
-navigation.users=U?ytkownicy
+navigation.users=U\u017Cytkownicy
 currentYear=Obecny rok
+pageName=Traker turniejowy
